RESOLVED FIXED184531
[GLIB] Tests WTF_RefPtr.ReleaseInNonMainThread and WTF_RefPtr.ReleaseInNonMainThreadDestroyInMainThread are crashing since they were added
https://bugs.webkit.org/show_bug.cgi?id=184531
Summary [GLIB] Tests WTF_RefPtr.ReleaseInNonMainThread and WTF_RefPtr.ReleaseInNonMai...
Carlos Garcia Campos
Reported 2018-04-12 03:16:05 PDT
It's not a bug in WebKit, but in the GLib implementation of TestWebKitAPI::Util::run(). We try to quit the main loop that hasn't been initialized. We should always use RunLoop::current() instead.
Attachments
Patch (2.83 KB, patch)
2018-04-12 03:41 PDT, Carlos Garcia Campos
mcatanzaro: review+
ews-watchlist: commit-queue-
Archive of layout-test-results from ews200 for win-future (12.77 MB, application/zip)
2018-04-12 07:16 PDT, EWS Watchlist
no flags
Carlos Garcia Campos
Comment 1 2018-04-12 03:28:55 PDT
hmm, fixing Uril::run() works for ReleaseInNonMainThread, but not for ReleaseInNonMainThreadDestroyInMainThread, because it ends up using scheduleOnMainThread and the generic implementation of that used RunLoop::main() too, so we need to initialize the main loop in that test.
Carlos Garcia Campos
Comment 2 2018-04-12 03:41:38 PDT
EWS Watchlist
Comment 3 2018-04-12 07:16:07 PDT
Comment on attachment 337786 [details] Patch Attachment 337786 [details] did not pass win-ews (win): Output: http://webkit-queues.webkit.org/results/7293838 New failing tests: http/tests/security/contentSecurityPolicy/userAgentShadowDOM/allow-audio.html
EWS Watchlist
Comment 4 2018-04-12 07:16:18 PDT
Created attachment 337795 [details] Archive of layout-test-results from ews200 for win-future The attached test failures were seen while running run-webkit-tests on the win-ews. Bot: ews200 Port: win-future Platform: CYGWIN_NT-6.1-2.9.0-0.318-5-3-x86_64-64bit
Carlos Garcia Campos
Comment 5 2018-04-13 00:27:10 PDT
Radar WebKit Bug Importer
Comment 6 2018-04-13 00:29:17 PDT
Note You need to log in before you can comment on or make changes to this bug.